<resources>
    <string name="app_name">LoginRegistration</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_registration_page">RegistrationPage</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="Fullname">Full Name</string>
    <string name="Age">Age</string>
    <string name="registerHere">"Register Here"</string>
</resources>

